rearranged divs so batch related elements for each item

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -13,7 +13,7 @@
       <button class="cart-btn" type="submit"> Cart (3)</button>
     </div>
     <div class="main-section">
-      <div class="main-section-nav">
+      <div class="sections">
         <div class="section-nav-title">
           <h2>Sections</h2>
         </div>
@@ -23,7 +23,7 @@
           <h2>Frozen</h2>
         </div>
       </div>
-      <div class="main-section-output">
+      <div class="main-content">
         <div class="main-section-output-title">
           <h1>Groceries</h1>
         </div>
@@ -34,13 +34,62 @@
           <div class="main-section-output-produce-details">
             <div class="main-section-output-produce-details-items">
               <h3 class="item-names">Item name</h3>
-              <h3 class="item-names">Item name</h3>
-              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
             </div>
-            <div class="main-section-output-produce-details-price">
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
               <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
               <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="main-section-output-produce">
+          <div class="main-section-output-produce-title">
+            <h3 class="section-titles">Deli</h3>
+          </div>
+          <div class="main-section-output-produce-details">
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
               <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="main-section-output-produce">
+          <div class="main-section-output-produce-title">
+            <h3 class="section-titles">Frozen</h3>
+          </div>
+          <div class="main-section-output-produce-details">
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
+            </div>
+            <div class="main-section-output-produce-details-items">
+              <h3 class="item-names">Item name</h3>
+              <h3 class="item-price">$3.44</h3>
+              <button class="add-to-cart-btn" type="submit">Add to Cart</button>
             </div>
           </div>
         </div>
