part 3 specs complete

--- a/part-3/index.html
+++ b/part-3/index.html
@@ -18,16 +18,22 @@
           <h2>Sections</h2>
         </div>
         <div class="grocery-sections">
-          <h2>Produce</h2>
-          <h2>Deli</h2>
-          <h2>Frozen</h2>
+          <a href="#produce">
+            <h2>Produce</h2>
+          </a>
+          <a href="#deli">
+            <h2>Deli</h2>
+          </a>
+          <a href="#frozen">
+            <h2>Frozen</h2>
+          </a>
         </div>
       </div>
       <div class="main-content">
         <div class="main-section-output-title">
           <h1>Groceries</h1>
         </div>
-        <div class="main-section-output-produce">
+        <div id="produce" class="main-content-section">
           <div class="main-section-output-produce-title">
             <h3 class="section-titles">Produce</h3>
           </div>
@@ -49,7 +55,7 @@
             </div>
           </div>
         </div>
-        <div class="main-section-output-produce">
+        <div id="deli" class="main-content-section">
           <div class="main-section-output-produce-title">
             <h3 class="section-titles">Deli</h3>
           </div>
@@ -71,7 +77,7 @@
             </div>
           </div>
         </div>
-        <div class="main-section-output-produce">
+        <div id="frozen" class="main-content-section">
           <div class="main-section-output-produce-title">
             <h3 class="section-titles">Frozen</h3>
           </div>
